[UPDATE] Find unit competency and elemen by code
